# vacuum

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: analyzer.rs  cleaner.rs  cli.rs  config.rs  lib.rs  main.rs  scan_cache.rs  space.rs  tui.rs  ui.rs
src/scanner/: build_artifacts.rs  cache.rs  custom_paths.rs  downloads.rs  duplicates.rs  large_files.rs  mod.rs  old_files.rs  temp.rs  trash.rs
